--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,35 @@
         <module>core</module>
         <module>app</module>
     </modules>
+    <scm>
+       <connection>scm:https://github.com/samridhi97/maven-multi-module-example.git</connection>
+       <url>https://github.com/samridhi97/maven-multi-module-example.git</url>
+       <developerConnection>scm:git:https://github.com/samridhi97/maven-multi-module-example.git</developerConnection>
+  </scm>
+    <distributionManagement>
+   <snapshotRepository>
+      <id>nexus</id>
+      <url>http://18.191.103.220:8081/nexus/content/repositories/snapshots</url>
+   </snapshotRepository>
+   <repository>
+      <id>nexus</id>
+      <url>http://18.191.103.220:8081/nexus/content/repositories/releases</url>
+   </repository>
+</distributionManagement>
+
+<build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>3.0.0-M1</version>
+          <configuration>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
+            <pushChanges>false</pushChanges>
+            <localCheckout>true</localCheckout>
+            <tagNameFormat>@{project.version}</tagNameFormat>
+          </configuration>
+        </plugin>
+      </plugins>
+</build>
 </project>
